@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-    		<version>12.2.0.jre8</version>
+    		<version>12.4.0.jre8</version>
 		</dependency>
 		-->
 		
