@@ -9,34 +9,26 @@
   </head>
   <body>
     <div class="wiki" style="display: block;">
-      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
-          / </span> Configuration for Microsoft SQL Server </h1>
-      <i>If you're using an OpenXava version older than 7.0 look at the <a href="ms-sql-server-ox6_en.html">old
-          instructions</a><br>
+      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a
+              href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava </a> </span> / <a
+            href="index_en.html">documentation</a> / </span> Configuration for Microsoft SQL Server </h1>
+      <i>If you're using an OpenXava version older than 7.0 look at the <a
+          href="ms-sql-server-ox6_en.html">old instructions</a><br>
       </i>
-      <div class="wiki" style="display: block;">Configuring your OpenXava
-        application to go against MS SQL Server is very simple, basically you
-        have to add a dependency to the JDBC driver for MS SQL Server in your
-        project and define correctly the datasource. You don't need to touch any
-        code of your application.</div>
-      <div class="wiki" style="display: block;">We assume you have already
-        installed and running MS SQL Server.<br>
+      <div class="wiki" style="display: block;">Configuring your OpenXava application to go against MS SQL Server is very simple, basically you have to add a dependency to the JDBC driver for MS SQL Server in your project and define correctly the datasource. You don't need to touch any code of your application.</div>
+      <div class="wiki" style="display: block;">We assume you have already installed and running MS SQL Server.<br>
         <h2 id="toc1">Add JDBC driver for MS SQL Server to your project</h2>
-        <p>Edit the <i>pom.xml</i> file in the root of your project, there add
-          the next dependency inside the <i>&lt;dependencies&gt;</i> part:</p>
+        <p>Edit the <i>pom.xml</i> file in the root of your project, there add the next dependency inside the <i>&lt;dependencies&gt;</i> part:</p>
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;com.microsoft.sqlserver&lt;/groupId&gt;
     &lt;artifactId&gt;mssql-jdbc&lt;/artifactId&gt;
-    &lt;version&gt;12.2.0.jre8&lt;/version&gt;
+    &lt;version&gt;12.4.0.jre8&lt;/version&gt;
 &lt;/dependency&gt;
-</code></pre>Maybe the above code is already in your <i>pom.xml</i> but
-        commented, in that case just uncomment it.</div>
+</code></pre>Maybe the above code is already in your <i>pom.xml</i> but commented, in that case just uncomment it.</div>
       <div class="wiki" style="display: block;"> </div>
       <div class="wiki" style="display: block;">
         <h2 id="toc1">Adjust your datasource definition</h2>
-        Edit <i>src/main/webapp/META-INF/context.xml</i> of your project to
-        adjust the datasource to point to MS SQL Server something like this:</div>
+        Edit <i>src/main/webapp/META-INF/context.xml</i> of your project to adjust the datasource to point to MS SQL Server something like this:</div>
       <div class="wiki" style="display: block;">
         <pre><code class="xml">&lt;Resource name="jdbc/MyAppDS" auth="Container"
     type="javax.sql.DataSource"
@@ -45,49 +37,25 @@
     driverClassName="com.microsoft.sqlserver.jdbc.SQLServerDriver"
     url="jdbc:sqlserver://localhost:1433;databaseName=myappdb"/&gt;
 </code></pre> </div>
-      <div class="wiki" style="display: block;">The differences are the <i>driverClassName</i>
-        and the <i>url</i>. The final part of the url, <i>myappdb</i> in this
-        example, is the name of your MS SQL Server database. Obviously, instead
-        of <i>localhost</i> you should put the address of the server that hosts
-        MS SQL Server. Also put the correct <i>username</i> and <i>password</i>.
-        Maybe the above code is already in your <i>context.xml</i> but
-        commented, in that case just uncomment it. Don't forget to comment or
-        remove the datasource for HSQLDB (the default one when you create a new
-        OpenXava project), only one datasource (with the same name) should be
-        active.</div>
+      <div class="wiki" style="display: block;">The differences are the <i>driverClassName</i> and the <i>url</i>. The final part of the url, <i>myappdb</i> in this example, is the name of your MS SQL Server database. Obviously, instead of <i>localhost</i> you should put the address of the server that hosts MS SQL Server. Also put the correct <i>username</i> and <i>password</i>. Maybe the above code is already in your <i>context.xml</i> but commented, in that case just uncomment it. Don't forget to comment or remove the datasource for HSQLDB (the default one when you create a new OpenXava project), only one datasource (with the same name) should be active.</div>
       <div class="wiki" style="display: block;">
         <h2>Rebuild your project</h2>
-        After the changes you have to rebuild your project. In OpenXava Studio
-        click with right mouse button on your project an choose <i>Run As &gt;
-          Maven install</i>, thus: </div>
-      <div class="wiki" style="display: block;"><img src="files/run-as-maven-install.png"
+        After the changes you have to rebuild your project. In OpenXava Studio click with right mouse button on your project an choose <i>Run As &gt; Maven install</i>, thus: </div>
+      <div class="wiki" style="display: block;"><img src="files/run-as-maven-install.png"
           alt=""></div>
-      <div class="wiki" style="display: block;">Or if you have Maven installed
-        in your computer and you prefer to use command line:
+      <div class="wiki" style="display: block;">Or if you have Maven installed in your computer and you prefer to use command line:
         <pre><code class="bash">$ cd myapp
 $ mvn install
 </code></pre>
-        <p>Optimization note: Instead of a <i>mvn install</i>, that do a
-          complete Maven build, you can use <i>mvn war:exploded</i>, enough to
-          apply the above changes for development. You can run <i>mvn
-            war:exploded</i> from OpenXava Studio with <i>Run As &gt; Maven
-            build...</i> and typing <i>war:exploded</i> for goal.</p>
+        <p>Optimization note: Instead of a <i>mvn install</i>, that do a complete Maven build, you can use <i>mvn war:exploded</i>, enough to apply the above changes for development. You can run <i>mvn war:exploded</i> from OpenXava Studio with <i>Run As &gt; Maven build...</i> and typing <i>war:exploded</i> for goal.</p>
         <h2>Run your application</h2>
-        <p>Run your application, it should work nicely against your MS SQL
-          Server database. If it fails, verify that your database server is up,
-          that the user and password in <i>context.xml</i> are correct, that
-          the server IP is correct. Also verify that the user has rights to
-          create databases and tables (if you want to use the automatic schema
-          generation of OpenXava, not needed if the tables already exist).</p>
+        <p>Run your application, it should work nicely against your MS SQL Server database. If it fails, verify that your database server is up, that the user and password in <i>context.xml</i> are correct, that the server IP is correct. Also verify that the user has rights to create databases and tables (if you want to use the automatic schema generation of OpenXava, not needed if the tables already exist).</p>
         <h2>Secure connection problems</h2>
-        <p>If the application doesn't work and at some point in the error trace
-          you encounter this:</p>
+        <p>If the application doesn't work and at some point in the error trace you encounter this:</p>
         <pre><code class="text">
 Caused by: com.microsoft.sqlserver.jdbc.SQLServerException: The driver could not establish a secure connection to SQL Server by using Secure Sockets Layer (SSL) encryption. <br>Error: "PKIX path building failed: sun.security.provider.certpath.SunCertPathBuilderException: unable to find valid certification path to requested target". ClientConnectionId:6b818518-97bd-4b0d-adb2-153605134e2e
 </code></pre>
-        <p>To resolve the problem, add the suffix <i>;encrypt=true;trustServerCertificate=true;</i>
-          to the connection URL, leaving your data source definition in <i>context.xml</i>
-          as follows::</p>
+        <p>To resolve the problem, add the suffix <i>;encrypt=true;trustServerCertificate=true;</i> to the connection URL, leaving your data source definition in <i>context.xml</i> as follows::</p>
         <pre><code class="xml">&lt;Resource name="jdbc/MyAppDS" auth="Container"
     type="javax.sql.DataSource"
     maxTotal="100" maxIdle="20" maxWaitMillis="10000"
@@ -97,11 +65,7 @@ Caused by: com.microsoft.sqlserver.jdbc.SQLServerException: The driver could not
 </code></pre>
         <h2>Other problems</h2>
         <p></p>
-        <p>If it still fails ask us in the <a href="https://sourceforge.net/p/openxava/discussion/419690/">OpenXava
-            Help forum</a>. Include the content of your <i>persistence.xml</i>,
-          <i>context.xml</i> (remove the passwords) and specially the stacktrace
-          produced, you can find the trace in the <i>Console</i> tab of
-          OpenXava Studio.</p>
+        <p>If it still fails ask us in the <a href="https://sourceforge.net/p/openxava/discussion/419690/">OpenXava Help forum</a>. Include the content of your <i>persistence.xml</i>, <i>context.xml</i> (remove the passwords) and specially the stacktrace produced, you can find the trace in the <i>Console</i> tab of OpenXava Studio.</p>
       </div>
     </div>
   </body>
