@@ -9,35 +9,26 @@
   </head>
   <body>
     <div class="wiki" style="display: block;">
-      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_es.html">documentación</a>
-          / </span> Configuración para Microsoft SQL Server</h1>
-      <i>Si estás usando una versión de OpenXava anterior a la 7.0 mira las <a
+      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a
+              href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava </a> </span> / <a
+            href="index_es.html">documentación</a> / </span> Configuración para Microsoft SQL Server</h1>
+      <i>Si estás usando una versión de OpenXava anterior a la 7.0 mira las <a
           href="ms-sql-server-ox6_es.html">instrucciones antiguas</a><br>
       </i>
-      <div class="wiki" style="display: block;">Configurar tu aplicación
-        OpenXava contra MS SQL Server es muy fácil, básicamente has de añadir
-        una dependencia al controlador JDBC para MS SQL Server en tu proyecto y
-        definir correctamente la base de datos. No necesitas tocar el código de
-        tu aplicación.</div>
-      <div class="wiki" style="display: block;">Asumimos que ya tienes el MS SQL
-        Server instalado y funcionando.<br>
+      <div class="wiki" style="display: block;">Configurar tu aplicación OpenXava contra MS SQL Server es muy fácil, básicamente has de añadir una dependencia al controlador JDBC para MS SQL Server en tu proyecto y definir correctamente la base de datos. No necesitas tocar el código de tu aplicación.</div>
+      <div class="wiki" style="display: block;">Asumimos que ya tienes el MS SQL Server instalado y funcionando.<br>
         <h2 id="toc1">Añadir controlador JDBC para MS SQL Server en el proyecto</h2>
-        <p>Edita el archivo <i>pom.xml</i> en la raíz de tu proyecto, allí
-          añade la siguiente dependencia dentro de la parte <i>&lt;dependencies&gt;</i>:</p>
+        <p>Edita el archivo <i>pom.xml</i> en la raíz de tu proyecto, allí añade la siguiente dependencia dentro de la parte <i>&lt;dependencies&gt;</i>:</p>
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;com.microsoft.sqlserver&lt;/groupId&gt;
     &lt;artifactId&gt;mssql-jdbc&lt;/artifactId&gt;
-    &lt;version&gt;12.2.0.jre8&lt;/version&gt;
+    &lt;version&gt;12.4.0.jre8&lt;/version&gt;
 &lt;/dependency&gt;
-</code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado,
-        en ese caso simplemente descoméntalo.</div>
+</code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado, en ese caso simplemente descoméntalo.</div>
       <div class="wiki" style="display: block;"> </div>
       <div class="wiki" style="display: block;">
         <h2 id="toc1">Ajustar la definición de la fuente de datos</h2>
-        Edita <i>src/main/webapp/META-INF/context.xml</i> de tu proyecto y
-        ajusta la definición de tu fuente de datos para que apunte a MS SQL
-        Server, algo así:</div>
+        Edita <i>src/main/webapp/META-INF/context.xml</i> de tu proyecto y ajusta la definición de tu fuente de datos para que apunte a MS SQL Server, algo así:</div>
       <div class="wiki" style="display: block;">
         <pre><code class="xml">&lt;Resource name="jdbc/MiAplicacionDS" auth="Container"
     type="javax.sql.DataSource"
@@ -46,50 +37,25 @@
     driverClassName="com.microsoft.sqlserver.jdbc.SQLServerDriver"
     url="jdbc:sqlserver://localhost:1433;databaseName=miaplicaciondb"/&gt;
 </code></pre> </div>
-      <div class="wiki" style="display: block;">La diferencia está en <i>driverClassName</i>
-        y <i>url</i>. La parte final de la url, <i>miaplicaciondb</i> en este
-        ejemplo, es el nombre de tu base de datos MS SQL Server. Obviamente, en
-        lugar de <i>localhost</i> deberías poner la dirección del servidor que
-        alberga MS SQL Server. También pon el <i>username</i> y <i>password</i>
-        correctos. Puede que el código de arriba ya esté en tu <i>context.xml</i>
-        pero comentado, en ese caso simplemente descoméntalo. No olvides
-        comentar o quitar la fuente de datos para HSQLDB (incluida por defecto
-        al crear un nuevo proyecto OpenXava), sólo una fuente de datos (con el
-        mismo nombre) debería estar activa.</div>
+      <div class="wiki" style="display: block;">La diferencia está en <i>driverClassName</i> y <i>url</i>. La parte final de la url, <i>miaplicaciondb</i> en este ejemplo, es el nombre de tu base de datos MS SQL Server. Obviamente, en lugar de <i>localhost</i> deberías poner la dirección del servidor que alberga MS SQL Server. También pon el <i>username</i> y <i>password</i> correctos. Puede que el código de arriba ya esté en tu <i>context.xml</i> pero comentado, en ese caso simplemente descoméntalo. No olvides comentar o quitar la fuente de datos para HSQLDB (incluida por defecto al crear un nuevo proyecto OpenXava), sólo una fuente de datos (con el mismo nombre) debería estar activa.</div>
       <div class="wiki" style="display: block;">
         <h2>Reconstruir proyecto</h2>
-        Después de los cambios has de reconstruir (rebuild) tu proyecto. En
-        OpenXava Studio pulsa con el botón derecho del ratón en tu proyecto y
-        escoge <i>Run As &gt; Maven install</i>, así: </div>
-      <div class="wiki" style="display: block;"><img src="files/run-as-maven-install.png"
+        Después de los cambios has de reconstruir (rebuild) tu proyecto. En OpenXava Studio pulsa con el botón derecho del ratón en tu proyecto y escoge <i>Run As &gt; Maven install</i>, así: </div>
+      <div class="wiki" style="display: block;"><img src="files/run-as-maven-install.png"
           alt=""></div>
-      <div class="wiki" style="display: block;">O si tienes Maven instalado en
-        tu ordenador y prefieres usar la línea de órdenes:
+      <div class="wiki" style="display: block;">O si tienes Maven instalado en tu ordenador y prefieres usar la línea de órdenes:
         <pre><code class="bash">$ cd miaplicacion
 $ mvn install
 </code></pre>
-        <p>Nota de optimización: En lugar de <i>mvn install</i>, que hace un <i>build</i>
-          de Maven completo, puedes usar <i>mvn war:exploded</i>, suficiente
-          para aplicar los cambios de arriba para desarrollo. Puedes llamar a <i>mvn
-            war:exploded</i> desde el OpenXava Studio con <i>Run As &gt; Maven
-            build...</i> y tecleando <i>war:exploded</i> para <i>goal</i>.</p>
+        <p>Nota de optimización: En lugar de <i>mvn install</i>, que hace un <i>build</i> de Maven completo, puedes usar <i>mvn war:exploded</i>, suficiente para aplicar los cambios de arriba para desarrollo. Puedes llamar a <i>mvn war:exploded</i> desde el OpenXava Studio con <i>Run As &gt; Maven build...</i> y tecleando <i>war:exploded</i> para <i>goal</i>.</p>
         <h2>Ejecutar aplicacion</h2>
-        <p>Ejecuta tu aplicación, debería funcionar bien contra tu base de datos
-          MS SQL Server. Si fallara, verifica que tu base de datos está
-          funcionando, que el usuario y la contraseña son correctos, que la IP
-          del servidor es correcta. Verifica también que el usuario tiene
-          privilegios para crear bases de datos y tablas (si quieres usar la
-          generación automática de esquema de OpenXava, no necesario si las
-          tablas ya existen).</p>
+        <p>Ejecuta tu aplicación, debería funcionar bien contra tu base de datos MS SQL Server. Si fallara, verifica que tu base de datos está funcionando, que el usuario y la contraseña son correctos, que la IP del servidor es correcta. Verifica también que el usuario tiene privilegios para crear bases de datos y tablas (si quieres usar la generación automática de esquema de OpenXava, no necesario si las tablas ya existen).</p>
         <h2>Problema con conexión segura</h2>
-        <p>Si al ejecutar la aplicación no funciona y en algún punto de la traza
-          de error te encuentras esto:</p>
+        <p>Si al ejecutar la aplicación no funciona y en algún punto de la traza de error te encuentras esto:</p>
         <pre><code class="text">
 Caused by: com.microsoft.sqlserver.jdbc.SQLServerException: The driver could not establish a secure connection to SQL Server by using Secure Sockets Layer (SSL) encryption. <br>Error: "PKIX path building failed: sun.security.provider.certpath.SunCertPathBuilderException: unable to find valid certification path to requested target". ClientConnectionId:6b818518-97bd-4b0d-adb2-153605134e2e
 </code></pre>
-        <p>Para resolver el problema añade el sufijo <i>;encrypt=true;trustServerCertificate=true;
-            </i>a la URL de conexión, dejando tu definición de fuente de datos
-          en <i>context.xml</i> de esta forma:</p>
+        <p>Para resolver el problema añade el sufijo <i>;encrypt=true;trustServerCertificate=true; </i>a la URL de conexión, dejando tu definición de fuente de datos en <i>context.xml</i> de esta forma:</p>
         <pre><code class="xml">&lt;Resource name="jdbc/MiAplicacionDS" auth="Container"
     type="javax.sql.DataSource"
     maxTotal="100" maxIdle="20" maxWaitMillis="10000"
@@ -98,11 +64,7 @@ Caused by: com.microsoft.sqlserver.jdbc.SQLServerException: The driver could not
     url="jdbc:sqlserver://localhost:1433;databaseName=miaplicaciondb;encrypt=true;trustServerCertificate=true;"/&gt;
 </code></pre>
         <h2>Otros problemas</h2>
-        <p>Si sigue fallando pregúntanos en el <a href="https://sourceforge.net/p/openxava/discussion/437013/">foro
-            de ayuda de OpenXava</a>. Incluye el contenido de tu <i>persistence.xml</i>,
-          <i>context.xml</i> (quita las contraseñas) y sobre todo la traza
-          generada, puedes encontrar la traza en la pestaña <i>Console</i> del
-          OpenXava Studio.</p>
+        <p>Si sigue fallando pregúntanos en el <a href="https://sourceforge.net/p/openxava/discussion/437013/">foro de ayuda de OpenXava</a>. Incluye el contenido de tu <i>persistence.xml</i>, <i>context.xml</i> (quita las contraseñas) y sobre todo la traza generada, puedes encontrar la traza en la pestaña <i>Console</i> del OpenXava Studio.</p>
       </div>
     </div>
   </body>
