@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.8.0</version>
+      <version>4.8.3</version>
       <scope>test</scope>
     </dependency>
     
